<resources>
    <string name="app_name">Aljaña</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>


    <string name="txt_slogan">If you want it, you can get it...</string>
    <string name="btn_login_main">Already have an account? Login</string>
    <string name="btn_join">Join now</string>

    <string name="edt_phoneNumber">Phone Number</string>
    <string name="edt_password">Password</string>
    <string name="chb_rememberMe">Remember me</string>
    <string name="txv_forgetPassword">Forget Password?</string>
    <string name="btn_login">Login</string>

    <string name="edt_name">Name</string>
    <string name="btn_createAccount">Create Account</string>
    <string name="title_activity_locate_us">Map</string>
    <string name="menu_locateus">Locate us</string>


</resources>