<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/login_applogo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/applogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="195dp"
            />

        <EditText
            android:id="@+id/login_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_applogo"
            android:background="@drawable/input_designs"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/edt_phoneNumber"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="19sp"
            />


        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_phone_number_input"
            android:background="@drawable/input_designs"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="6dp"
            android:hint="@string/edt_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="19sp"
            />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/login_password_input"
            android:layout_marginTop="5dp"
            >

            <com.rey.material.widget.CheckBox
                android:id="@+id/remember_me_chkb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Material.Drawable.CheckBox"
                android:text="@string/chb_rememberMe"
                android:textColor="@android:color/white"
                app:cbd_strokeColor="@android:color/white"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginLeft="17dp"
                />

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_forgetPassword"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                android:layout_marginLeft="70dp"
                />

        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="17dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>